feat: change formatting

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -33,16 +33,12 @@
         </section>
         <section>
           <h3 class="middle-title">Избранное</h3>
-          <span
-            >Добавлено в избранное: <span class="selection-count">0</span></span
-          >
+          <span>Добавлено в избранное: <span class="selection-count">0</span></span>
           <span>Свободных слотов: <span class="selection-rest">20</span></span>
           <span class="selection-warning"></span>
         </section>
         <section>
-          <label for="sort-select"
-            ><h3 class="middle-title">Сортировать</h3></label
-          >
+          <label for="sort-select"><h3 class="middle-title">Сортировать</h3></label>
           <select size="1" class="sort-select" id="sort-select">
             <option value="nameUp">По названию &uarr;</option>
             <option value="nameDown">По названию &darr;</option>
@@ -76,9 +72,7 @@
               <li>
                 <input type="checkbox" id="snowflake-shape" />
                 <label class="shape-label" for="snowflake-shape"
-                  ><img
-                    src="./assets/svg/snowflake.svg"
-                    alt="snowflake-shape-toy"
+                  ><img src="./assets/svg/snowflake.svg" alt="snowflake-shape-toy"
                 /></label>
               </li>
               <li>
@@ -98,14 +92,7 @@
           <section class="inner-section">
             <h4 class="small-title">Год приобретения</h4>
             <label for="year-of-manufacture">1940</label>
-            <input
-              type="range"
-              name=""
-              id="year-of-manufacture"
-              min="1940"
-              max="2020"
-              step="10"
-            />
+            <input type="range" name="" id="year-of-manufacture" min="1940" max="2020" step="10" />
             <label for="year-of-manufacture">2020</label>
           </section>
           <section class="inner-section">
@@ -113,38 +100,23 @@
             <ul class="color-list">
               <li>
                 <input type="checkbox" id="white-color" />
-                <label
-                  class="color-label color-label_white"
-                  for="white-color"
-                ></label>
+                <label class="color-label color-label_white" for="white-color"></label>
               </li>
               <li>
                 <input type="checkbox" id="yellow-color" />
-                <label
-                  class="color-label color-label_yellow"
-                  for="yellow-color"
-                ></label>
+                <label class="color-label color-label_yellow" for="yellow-color"></label>
               </li>
               <li>
                 <input type="checkbox" id="red-color" />
-                <label
-                  class="color-label color-label_red"
-                  for="red-color"
-                ></label>
+                <label class="color-label color-label_red" for="red-color"></label>
               </li>
               <li>
                 <input type="checkbox" id="blue-color" />
-                <label
-                  class="color-label color-label_blue"
-                  for="blue-color"
-                ></label>
+                <label class="color-label color-label_blue" for="blue-color"></label>
               </li>
               <li>
                 <input type="checkbox" id="green-color" />
-                <label
-                  class="color-label color-label_green"
-                  for="green-color"
-                ></label>
+                <label class="color-label color-label_green" for="green-color"></label>
               </li>
             </ul>
           </section>
@@ -173,11 +145,7 @@
           </section>
           <section class="inner-section">
             <h4 class="small-title">Любимые игрушки</h4>
-            <input
-              type="checkbox"
-              id="favorite-toy"
-              class="favorite-toy-input"
-            />
+            <input type="checkbox" id="favorite-toy" class="favorite-toy-input" />
           </section>
           <section class="inner-section">
             <button class="reset-filter">Сбросить фильтры</button>
@@ -185,6 +153,7 @@
         </section>
       </div>
       <div class="toys-container"></div>
+
       <template>
         <div>
           <h4></h4>
@@ -207,9 +176,7 @@
         </a>
       </div>
       <div>
-        <a href="https://github.com/SavitskayaKseniya22" target="_blank">
-          made by Kseniya Savitskaya
-        </a>
+        <a href="https://github.com/SavitskayaKseniya22" target="_blank"> made by Kseniya Savitskaya </a>
       </div>
       <div>© 2021</div>
     </footer>
