refactor: search-form

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -52,32 +52,26 @@
             <h4 class="small-title">Форма</h4>
             <ul class="shape-list">
               <li>
-                <input type="checkbox" id="round-shape" />
-                <label class="shape-label" for="round-shape"
-                  ><img src="./assets/svg/ball.svg" alt="round-shape-toy"
-                /></label>
+                <input type="checkbox" id="round" />
+                <label class="shape-label" for="round"><img src="./assets/svg/ball.svg" alt="round-shape-toy" /></label>
               </li>
               <li>
-                <input type="checkbox" id="bell-shape" />
-                <label class="shape-label" for="bell-shape"
-                  ><img src="./assets/svg/bell.svg" alt="bell-shape-toy"
-                /></label>
+                <input type="checkbox" id="bell" />
+                <label class="shape-label" for="bell"><img src="./assets/svg/bell.svg" alt="bell-shape-toy" /></label>
               </li>
               <li>
-                <input type="checkbox" id="cone-shape" />
-                <label class="shape-label" for="cone-shape"
-                  ><img src="./assets/svg/cone.svg" alt="cone-shape-toy"
-                /></label>
+                <input type="checkbox" id="cone" />
+                <label class="shape-label" for="cone"><img src="./assets/svg/cone.svg" alt="cone-shape-toy" /></label>
               </li>
               <li>
-                <input type="checkbox" id="snowflake-shape" />
-                <label class="shape-label" for="snowflake-shape"
+                <input type="checkbox" id="snowflake" />
+                <label class="shape-label" for="snowflake"
                   ><img src="./assets/svg/snowflake.svg" alt="snowflake-shape-toy"
                 /></label>
               </li>
               <li>
-                <input type="checkbox" id="custom-shape" />
-                <label class="shape-label" for="custom-shape"
+                <input type="checkbox" id="custom" />
+                <label class="shape-label" for="custom"
                   ><img src="./assets/svg/toy.svg" alt="custom-shape-toy"
                 /></label>
               </li>
@@ -99,24 +93,24 @@
             <h4 class="small-title">Цвет</h4>
             <ul class="color-list">
               <li>
-                <input type="checkbox" id="white-color" />
-                <label class="color-label color-label_white" for="white-color"></label>
+                <input type="checkbox" id="white" />
+                <label class="color-label color-label_white" for="white"></label>
               </li>
               <li>
-                <input type="checkbox" id="yellow-color" />
-                <label class="color-label color-label_yellow" for="yellow-color"></label>
+                <input type="checkbox" id="yellow" />
+                <label class="color-label color-label_yellow" for="yellow"></label>
               </li>
               <li>
-                <input type="checkbox" id="red-color" />
-                <label class="color-label color-label_red" for="red-color"></label>
+                <input type="checkbox" id="red" />
+                <label class="color-label color-label_red" for="red"></label>
               </li>
               <li>
-                <input type="checkbox" id="blue-color" />
-                <label class="color-label color-label_blue" for="blue-color"></label>
+                <input type="checkbox" id="blue" />
+                <label class="color-label color-label_blue" for="blue"></label>
               </li>
               <li>
-                <input type="checkbox" id="green-color" />
-                <label class="color-label color-label_green" for="green-color"></label>
+                <input type="checkbox" id="green" />
+                <label class="color-label color-label_green" for="green"></label>
               </li>
             </ul>
           </section>
@@ -124,20 +118,20 @@
             <h4 class="small-title">Размер</h4>
             <ul class="size-list">
               <li>
-                <input type="checkbox" id="big-size" />
-                <label class="size-label size-label_big" for="big-size"
+                <input type="checkbox" id="big" />
+                <label class="size-label size-label_big" for="big"
                   ><img src="./assets/svg/ball.svg" alt="big-size-toy"
                 /></label>
               </li>
               <li>
-                <input type="checkbox" id="middle-size" />
-                <label class="size-label size-label_middle" for="middle-size"
+                <input type="checkbox" id="middle" />
+                <label class="size-label size-label_middle" for="middle"
                   ><img src="./assets/svg/ball.svg" alt="middle-size"
                 /></label>
               </li>
               <li>
-                <input type="checkbox" id="small-size" />
-                <label class="size-label size-label_small" for="small-size"
+                <input type="checkbox" id="small" />
+                <label class="size-label size-label_small" for="small"
                   ><img src="./assets/svg/ball.svg" alt="small-size"
                 /></label>
               </li>
