feat: add searchAll function

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -139,7 +139,9 @@
           </section>
           <section class="inner-section">
             <h4 class="small-title">Любимые игрушки</h4>
-            <input type="checkbox" id="favorite-toy" class="favorite-toy-input" />
+            <label for="favorite" class="favorite-label">
+              <input type="checkbox" id="favorite" />
+            </label>
           </section>
           <section class="inner-section">
             <button class="reset-filter">Сбросить фильтры</button>
