feat: add noUISlider

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -79,15 +79,11 @@
           </section>
           <section class="inner-section">
             <h4 class="small-title">Количество экземпляров</h4>
-            <label for="amount">1</label>
-            <input type="range" name="" id="amount" min="1" max="12" step="1" />
-            <label for="amount">12</label>
+            <div id="amount"></div>
           </section>
           <section class="inner-section">
             <h4 class="small-title">Год приобретения</h4>
-            <label for="year-of-manufacture">1940</label>
-            <input type="range" name="" id="year-of-manufacture" min="1940" max="2020" step="10" />
-            <label for="year-of-manufacture">2020</label>
+            <div id="year-of-manufacture"></div>
           </section>
           <section class="inner-section">
             <h4 class="small-title">Цвет</h4>
