feat:  add resrore checkboxes

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -141,6 +141,7 @@
           </section>
           <section class="inner-section">
             <button class="reset-filter">Сбросить фильтры</button>
+            <button class="reset-storage">Сбросить настройки</button>
           </section>
         </section>
       </div>
