--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -33,9 +33,10 @@
         </section>
         <section>
           <h3 class="middle-title">Избранное</h3>
-          <span>Добавлено в избранное: <button class="selection-count">0</button></span>
+          <span>Добавлено в избранное: <span class="selection-count">0</span></span>
           <span>Свободных слотов: <span class="selection-rest">20</span></span>
           <span class="selection-warning"></span>
+          <button class="open-selected">Открыть избранное</button>
           <div class="selection-container">
             <button class="selection-inner__close">
               <img src="./assets/svg/close-white.svg" alt="close button" />
