feat: add clear favorite button

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -26,7 +26,6 @@
             autocomplete="off"
             autofocus
           />
-
           <button class="clear-search">
             <img src="./assets/svg/close.svg" alt="clear search" />
           </button>
@@ -37,6 +36,7 @@
           <span>Свободных слотов: <span class="selection-rest">20</span></span>
           <span class="selection-warning"></span>
           <button class="open-selected">Открыть избранное</button>
+          <button class="clear-selected">Очистить избранное</button>
           <div class="selection-container">
             <button class="selection-inner__close">
               <img src="./assets/svg/close-white.svg" alt="close button" />
