feat: add common.scss

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./assets/favicon.ico" rel="shortcut icon" />
     <title>Christmas-task</title>
-    <a href="./toys.html">Игрушки</a>
-    <a href="./trees.html">Ёлка</a>
   </head>
-  <body></body>
+  <body class="body start-window">
+    <header class="header">
+      <nav>
+        <a href="./toys.html"><h2 class="big-title">Игрушки</h2></a>
+        <a href="./trees.html"><h2 class="big-title">Ёлка</h2></a>
+      </nav>
+    </header>
+    <main class="main">
+      <button class="start-game"><a href="./toys.html">Наряжать ёлку!</a></button>
+    </main>
+    <footer class="footer">
+      <div>
+        <a href="https://rs.school/js/" target="_blank">
+          <img src="./assets/svg/rs-school-js.svg" alt="link" width="100" />
+        </a>
+      </div>
+      <div>
+        <a href="https://github.com/SavitskayaKseniya22" target="_blank"> made by Kseniya Savitskaya </a>
+      </div>
+      <div>© 2021</div>
+    </footer>
+  </body>
 </html>
