--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -9,6 +9,7 @@
   </head>
   <body class="body">
     <header class="header">
+      <a href="./index.html" class="back-button"><img src="./assets/svg/arrow-left.svg" alt="back" /></a>
       <h2 class="big-title">Ёлка</h2>
     </header>
     <main class="main">
