--- a/christmas-task/src/toys.html
+++ b/christmas-task/src/toys.html
@@ -9,9 +9,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <a href="./index.html" type="button" class="back-button"
-        ><img src="./assets/svg/arrow-left.svg" alt="back"
-      /></a>
+      <a href="./index.html" type="button" class="back-button"><img src="./assets/svg/arrow-left.svg" alt="back" /></a>
       <h2 class="big-title">Игрушки</h2>
     </header>
     <main class="main">
@@ -63,9 +61,7 @@
             <ul class="shape-list">
               <li>
                 <input type="checkbox" id="round" />
-                <label class="shape-label" for="round"
-                  ><img src="./assets/svg/ball.svg" alt="round-shape-toy"
-                /></label>
+                <label class="shape-label" for="round"><img src="./assets/svg/ball.svg" alt="round-shape-toy" /></label>
               </li>
               <li>
                 <input type="checkbox" id="bell" />
