fix: code review part2-1

--- a/christmas-task/src/toys.html
+++ b/christmas-task/src/toys.html
@@ -142,10 +142,11 @@
             </ul>
           </section>
           <section class="inner-section">
-            <h4 class="small-title">Любимые игрушки</h4>
-            <label for="favorite" class="favorite-label">
-              <input type="checkbox" id="favorite" />
-            </label>
+            <label for="favorite" class="favorite-label favorite-title"
+              ><h4 class="small-title">Любимые игрушки</h4></label
+            >
+            <input type="checkbox" id="favorite" />
+            <label for="favorite" class="favorite-label"><img src="./assets/svg/ball-2.svg" alt="small-size" /> </label>
           </section>
           <section class="inner-section">
             <button class="reset-filter">Сбросить фильтры</button>
