feat: add selection view in tree.html

--- a/christmas-task/src/toys.html
+++ b/christmas-task/src/toys.html
@@ -154,7 +154,7 @@
           </section>
         </section>
       </div>
-      <div class="toys-container"></div>
+      <ul class="toys-container"></ul>
     </main>
     <footer class="footer">
       <div>
