--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -24,78 +24,72 @@
           <h3 class="middle-title">Выберите ёлку</h3>
           <ul>
             <li>
-              <input type="radio" id="tree1" name="tree" value="tree1" />
+              <input type="radio" id="tree1" name="tree" value="1" />
               <label for="tree1"> <img src="./assets/tree/1.png" alt="tree 1" /></label>
             </li>
             <li>
-              <input type="radio" id="tree2" name="tree" value="tree2" />
+              <input type="radio" id="tree2" name="tree" value="2" />
               <label for="tree2"> <img src="./assets/tree/2.png" alt="tree 2" /></label>
             </li>
             <li>
-              <input type="radio" id="tree3" name="tree" value="tree3" />
+              <input type="radio" id="tree3" name="tree" value="3" />
               <label for="tree3"> <img src="./assets/tree/3.png" alt="tree 3" /></label>
             </li>
             <li>
-              <input type="radio" id="tree4" name="tree" value="tree4" />
+              <input type="radio" id="tree4" name="tree" value="4" />
               <label for="tree4"> <img src="./assets/tree/4.png" alt="tree 4" /></label>
             </li>
             <li>
-              <input type="radio" id="tree5" name="tree" value="tree5" />
+              <input type="radio" id="tree5" name="tree" value="5" />
               <label for="tree5"> <img src="./assets/tree/5.png" alt="tree 5" /></label>
             </li>
             <li>
-              <input type="radio" id="tree6" name="tree" value="tree6" />
+              <input type="radio" id="tree6" name="tree" value="6" />
               <label for="tree6"> <img src="./assets/tree/6.png" alt="tree 6" /></label>
             </li>
           </ul>
         </section>
         <section class="bg-options">
           <h3 class="middle-title">Выберите фон</h3>
-          <ul>
+          <ul class="bg-list">
             <li>
-              <input type="radio" id="bg1" name="bg" value="bg1" />
+              <input type="radio" id="bg1" name="bg" value="1" />
               <label for="bg1"> <img src="./assets/bg/1.jpg" alt="background 1" /></label>
             </li>
             <li>
-              <input type="radio" id="bg2" name="bg" value="bg2" />
+              <input type="radio" id="bg2" name="bg" value="2" />
               <label for="bg2"> <img src="./assets/bg/2.jpg" alt="background 2" /></label>
             </li>
             <li>
-              <input type="radio" id="bg3" name="bg" value="bg3" />
+              <input type="radio" id="bg3" name="bg" value="3" />
               <label for="bg3"> <img src="./assets/bg/3.jpg" alt="background 3" /></label>
             </li>
             <li>
-              <input type="radio" id="bg4" name="bg" value="bg4" />
+              <input type="radio" id="bg4" name="bg" value="4" />
               <label for="bg4"> <img src="./assets/bg/4.jpg" alt="background 4" /></label>
             </li>
             <li>
-              <input type="radio" id="bg5" name="bg" value="bg5" />
+              <input type="radio" id="bg5" name="bg" value="5" />
               <label for="bg5"> <img src="./assets/bg/5.jpg" alt="background 5" /></label>
             </li>
             <li>
-              <input type="radio" id="bg6" name="bg" value="bg6" />
+              <input type="radio" id="bg6" name="bg" value="6" />
               <label for="bg6"> <img src="./assets/bg/6.jpg" alt="background 6" /></label>
             </li>
             <li>
-              <input type="radio" id="bg7" name="bg" value="bg7" />
+              <input type="radio" id="bg7" name="bg" value="7" />
               <label for="bg7"> <img src="./assets/bg/7.jpg" alt="background 7" /></label>
             </li>
+
             <li>
-              <input type="radio" id="bg8" name="bg" value="bg8" />
-              <label for="bg8"> <img src="./assets/bg/8.jpg" alt="background 8" /></label>
-            </li>
-            <li>
-              <input type="radio" id="bg9" name="bg" value="bg9" />
-              <label for="bg9"> <img src="./assets/bg/9.jpg" alt="background 9" /></label>
-            </li>
-            <li>
-              <input type="radio" id="bg10" name="bg" value="bg10" />
+              <input type="radio" id="bg10" name="bg" value="10" />
               <label for="bg10"> <img src="./assets/bg/10.jpg" alt="background 10" /></label>
             </li>
           </ul>
         </section>
         <section class="garland-options">
           <h3 class="middle-title">Добавить гирлянду</h3>
+          <input type="checkbox" class="garland-enabler" />
           <ul>
             <li>
               <input type="radio" id="garland-white" name="garland" value="garland-white" />
@@ -118,7 +112,6 @@
               <label for="garland-green"></label>
             </li>
           </ul>
-          <input type="checkbox" />
         </section>
       </div>
       <div class="result-screen"></div>
@@ -153,3 +146,16 @@
     </footer>
   </body>
 </html>
+
+<ul>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
