--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -9,13 +9,12 @@
   </head>
   <body class="body start-window">
     <header class="header">
-      <nav>
-        <a href="./toys.html"><h2 class="big-title">Игрушки</h2></a>
-        <a href="./trees.html"><h2 class="big-title">Ёлка</h2></a>
-      </nav>
+      <a href="./toys/toys.html"><h2 class="big-title">Игрушки</h2></a>
+      <img src="./assets/svg/ball-2.svg" alt="ball" />
+      <a href="./trees.html"><h2 class="big-title">Ёлка</h2></a>
     </header>
     <main class="main">
-      <button class="start-game"><a href="./toys.html">Наряжать ёлку!</a></button>
+      <button class="start-game"><a href="./toys/toys.html">Наряжать ёлку!</a></button>
     </main>
     <footer class="footer">
       <div>
