--- a/christmas-task/src/toys/toys.html
+++ b/christmas-task/src/toys/toys.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./assets/favicon.ico" rel="shortcut icon" />
+    <link href="../assets/favicon.ico" rel="shortcut icon" />
     <title>Christmas-task</title>
   </head>
   <body class="body">
     <header class="header">
-      <a href="./index.html" type="button" class="back-button"><img src="./assets/svg/arrow-left.svg" alt="back" /></a>
-      <h2 class="big-title">Игрушки</h2>
+      <h2 class="big-title current-title">Игрушки</h2>
+      <img src="../assets/svg/ball-2.svg" alt="ball" />
+      <a href="../trees.html"><h2 class="big-title">Ёлка</h2></a>
+
+      <a href="../index.html" type="button" class="back-button"
+        ><img src="../assets/svg/arrow-left.svg" alt="back"
+      /></a>
     </header>
     <main class="main">
       <div class="settings">
@@ -28,7 +33,7 @@
             autofocus
           />
           <button class="clear-search">
-            <img src="./assets/svg/close.svg" alt="clear search" />
+            <img src="../assets/svg/close.svg" alt="clear search" />
           </button>
         </section>
         <section>
@@ -40,7 +45,7 @@
           <button class="clear-selected">Очистить избранное</button>
           <div class="selection-container">
             <button class="selection__close">
-              <img src="./assets/svg/close-white.svg" alt="close button" />
+              <img src="../assets/svg/close-white.svg" alt="close button" />
             </button>
             <div class="selection-inner"></div>
           </div>
@@ -61,26 +66,28 @@
             <ul class="shape-list">
               <li>
                 <input type="checkbox" id="round" />
-                <label class="shape-label" for="round"><img src="./assets/svg/ball.svg" alt="round-shape-toy" /></label>
+                <label class="shape-label" for="round"
+                  ><img src="../assets/svg/ball.svg" alt="round-shape-toy"
+                /></label>
               </li>
               <li>
                 <input type="checkbox" id="bell" />
-                <label class="shape-label" for="bell"><img src="./assets/svg/bell.svg" alt="bell-shape-toy" /></label>
+                <label class="shape-label" for="bell"><img src="../assets/svg/bell.svg" alt="bell-shape-toy" /></label>
               </li>
               <li>
                 <input type="checkbox" id="cone" />
-                <label class="shape-label" for="cone"><img src="./assets/svg/cone.svg" alt="cone-shape-toy" /></label>
+                <label class="shape-label" for="cone"><img src="../assets/svg/cone.svg" alt="cone-shape-toy" /></label>
               </li>
               <li>
                 <input type="checkbox" id="snowflake" />
                 <label class="shape-label" for="snowflake"
-                  ><img src="./assets/svg/snowflake.svg" alt="snowflake-shape-toy"
+                  ><img src="../assets/svg/snowflake.svg" alt="snowflake-shape-toy"
                 /></label>
               </li>
               <li>
                 <input type="checkbox" id="custom" />
                 <label class="shape-label" for="custom"
-                  ><img src="./assets/svg/toy.svg" alt="custom-shape-toy"
+                  ><img src="../assets/svg/toy.svg" alt="custom-shape-toy"
                 /></label>
               </li>
             </ul>
@@ -124,19 +131,19 @@
               <li>
                 <input type="checkbox" id="big" />
                 <label class="size-label size-label_big" for="big"
-                  ><img src="./assets/svg/ball.svg" alt="big-size-toy"
+                  ><img src="../assets/svg/ball.svg" alt="big-size-toy"
                 /></label>
               </li>
               <li>
                 <input type="checkbox" id="middle" />
                 <label class="size-label size-label_middle" for="middle"
-                  ><img src="./assets/svg/ball.svg" alt="middle-size"
+                  ><img src="../assets/svg/ball.svg" alt="middle-size"
                 /></label>
               </li>
               <li>
                 <input type="checkbox" id="small" />
                 <label class="size-label size-label_small" for="small"
-                  ><img src="./assets/svg/ball.svg" alt="small-size"
+                  ><img src="../assets/svg/ball.svg" alt="small-size"
                 /></label>
               </li>
             </ul>
@@ -146,7 +153,9 @@
               ><h4 class="small-title">Любимые игрушки</h4></label
             >
             <input type="checkbox" id="favorite" />
-            <label for="favorite" class="favorite-label"><img src="./assets/svg/ball-2.svg" alt="small-size" /> </label>
+            <label for="favorite" class="favorite-label"
+              ><img src="../assets/svg/ball-2.svg" alt="small-size" />
+            </label>
           </section>
           <section class="inner-section">
             <button class="reset-filter">Сбросить фильтры</button>
@@ -159,7 +168,7 @@
     <footer class="footer">
       <div>
         <a href="https://rs.school/js/" target="_blank">
-          <img src="./assets/svg/rs-school-js.svg" alt="link" width="100" />
+          <img src="../assets/svg/rs-school-js.svg" alt="link" width="100" />
         </a>
       </div>
       <div>
