--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -24,8 +24,8 @@
               <audio src="./assets/audio/audio.mp3"></audio>
             </li>
             <li>
-              <input type="checkbox" id="snow" />
-              <label for="snow"><img src="./assets/svg/snow.svg" alt="snow" /></label>
+              <input type="checkbox" id="toggle-button-snow" />
+              <label for="toggle-button-snow"><img src="./assets/svg/snow.svg" alt="snow" /></label>
             </li>
           </ul>
         </section>
@@ -62,36 +62,36 @@
           <h3 class="middle-title">Выберите фон</h3>
           <ul class="bg-list">
             <li>
-              <input type="radio" id="bg1" name="bg" value="1" checked />
+              <input type="radio" id="bg1" name="bg" value="bg1" checked />
               <label for="bg1"> <img src="./assets/bg/1.jpg" alt="background 1" /></label>
             </li>
             <li>
-              <input type="radio" id="bg2" name="bg" value="2" />
+              <input type="radio" id="bg2" name="bg" value="bg2" />
               <label for="bg2"> <img src="./assets/bg/2.jpg" alt="background 2" /></label>
             </li>
             <li>
-              <input type="radio" id="bg3" name="bg" value="3" />
+              <input type="radio" id="bg3" name="bg" value="bg3" />
               <label for="bg3"> <img src="./assets/bg/3.jpg" alt="background 3" /></label>
             </li>
             <li>
-              <input type="radio" id="bg4" name="bg" value="4" />
+              <input type="radio" id="bg4" name="bg" value="bg4" />
               <label for="bg4"> <img src="./assets/bg/4.jpg" alt="background 4" /></label>
             </li>
             <li>
-              <input type="radio" id="bg5" name="bg" value="5" />
+              <input type="radio" id="bg5" name="bg" value="bg5" />
               <label for="bg5"> <img src="./assets/bg/5.jpg" alt="background 5" /></label>
             </li>
             <li>
-              <input type="radio" id="bg6" name="bg" value="6" />
+              <input type="radio" id="bg6" name="bg" value="bg6" />
               <label for="bg6"> <img src="./assets/bg/6.jpg" alt="background 6" /></label>
             </li>
             <li>
-              <input type="radio" id="bg7" name="bg" value="7" />
+              <input type="radio" id="bg7" name="bg" value="bg7" />
               <label for="bg7"> <img src="./assets/bg/7.jpg" alt="background 7" /></label>
             </li>
 
             <li>
-              <input type="radio" id="bg10" name="bg" value="10" />
+              <input type="radio" id="bg10" name="bg" value="bg10" />
               <label for="bg10"> <img src="./assets/bg/10.jpg" alt="background 10" /></label>
             </li>
           </ul>
