feat: reset button for game settings

--- a/christmas-task/src/toys/toys.html
+++ b/christmas-task/src/toys/toys.html
@@ -26,7 +26,7 @@
           <input
             type="text"
             name="search"
-            class="search-input"
+            class="search-input default-button"
             id="search"
             placeholder="Поиск"
             autocomplete="off"
@@ -41,8 +41,8 @@
           <span>Добавлено в избранное: <span class="selection-count">0</span></span>
           <span>Свободных слотов: <span class="selection-rest">20</span></span>
           <span class="selection-warning"></span>
-          <button class="open-selected">Открыть избранное</button>
-          <button class="clear-selected">Очистить избранное</button>
+          <button class="open-selected default-button">Открыть избранное</button>
+          <button class="clear-selected default-button">Очистить избранное</button>
           <div class="selection-container">
             <button class="selection__close">
               <img src="../assets/svg/close-white.svg" alt="close button" />
@@ -52,7 +52,7 @@
         </section>
         <section>
           <label for="sort-select" class="label-title"><h3 class="middle-title">Сортировать</h3></label>
-          <select size="1" class="sort-select" id="sort-select">
+          <select size="1" class="sort-select default-button" id="sort-select">
             <option value="nameUp">По названию &uarr;</option>
             <option value="nameDown">По названию &darr;</option>
             <option value="valueUp">По году приобретения &uarr;</option>
@@ -158,8 +158,8 @@
             </label>
           </section>
           <section class="inner-section">
-            <button class="reset-filter">Сбросить фильтры</button>
-            <button class="reset-storage">Сбросить настройки</button>
+            <button class="reset-filter default-button">Сбросить фильтры</button>
+            <button class="reset-storage default-button">Сбросить настройки</button>
           </section>
         </section>
       </div>
