--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -28,6 +28,7 @@
               <label for="toggle-button-snow"><img src="./assets/svg/snow.svg" alt="snow" /></label>
             </li>
           </ul>
+          <button class="reset-storage default-button">Сбросить настройки</button>
         </section>
         <section class="tree-options big-item-container">
           <h3 class="middle-title">Выберите ёлку</h3>
