feat: add pulsing garland item

--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -103,24 +103,38 @@
           <ul>
             <li>
               <input type="radio" id="garland-white" name="garland" value="garland-white" />
-              <label for="garland-white" class="color_white"></label>
+              <label for="garland-white" class="animate-blink color_white"></label>
             </li>
             <li>
               <input type="radio" id="garland-yellow" name="garland" value="garland-yellow" />
-              <label for="garland-yellow" class="color_yellow"></label>
+              <label for="garland-yellow" class="animate-blink color_yellow"></label>
             </li>
             <li>
               <input type="radio" id="garland-red" name="garland" value="garland-red" />
-              <label for="garland-red" class="color_red"></label>
+              <label for="garland-red" class="animate-blink color_red"></label>
             </li>
             <li>
               <input type="radio" id="garland-blue" name="garland" value="garland-blue" />
-              <label for="garland-blue" class="color_blue"></label>
+              <label for="garland-blue" class="animate-blink color_blue"></label>
             </li>
             <li>
               <input type="radio" id="garland-green" name="garland" value="garland-green" />
-              <label for="garland-green" class="color_green"></label>
+              <label for="garland-green" class="animate-blink color_green"></label>
             </li>
+          </ul>
+
+          <ul id="garland-block">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
           </ul>
         </section>
       </div>
