feat: add pulsing garland logic

--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -102,39 +102,25 @@
           <input type="checkbox" class="garland-enabler" />
           <ul>
             <li>
-              <input type="radio" id="garland-white" name="garland" value="garland-white" />
-              <label for="garland-white" class="animate-blink color_white"></label>
+              <input type="radio" id="garland-multy" name="garland" value="1" data-color="color_multy" />
+              <label for="garland-multy" class="animate-blink color_multy"></label>
             </li>
             <li>
-              <input type="radio" id="garland-yellow" name="garland" value="garland-yellow" />
+              <input type="radio" id="garland-yellow" name="garland" value="2" data-color="color_yellow" />
               <label for="garland-yellow" class="animate-blink color_yellow"></label>
             </li>
             <li>
-              <input type="radio" id="garland-red" name="garland" value="garland-red" />
+              <input type="radio" id="garland-red" name="garland" value="3" data-color="color_red" />
               <label for="garland-red" class="animate-blink color_red"></label>
             </li>
             <li>
-              <input type="radio" id="garland-blue" name="garland" value="garland-blue" />
+              <input type="radio" id="garland-blue" name="garland" value="4" data-color="color_blue" />
               <label for="garland-blue" class="animate-blink color_blue"></label>
             </li>
             <li>
-              <input type="radio" id="garland-green" name="garland" value="garland-green" />
+              <input type="radio" id="garland-green" name="garland" value="5" data-color="color_green" />
               <label for="garland-green" class="animate-blink color_green"></label>
             </li>
-          </ul>
-
-          <ul id="garland-block">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
           </ul>
         </section>
       </div>
@@ -148,14 +134,7 @@
         </section>
         <section class="done-options big-item-container">
           <h3 class="middle-title">Вы нарядили</h3>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+          <ul></ul>
         </section>
       </div>
     </main>
