fix: block position in main

--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -126,7 +126,11 @@
       </div>
 
       <div class="result-screen bg1 bg">
-        <img src="./assets/tree/1.png" alt="tree" class="tree-img" />
+        <img src="./assets/tree/1.png" alt="tree" class="tree-img" usemap="#workmap" />
+
+        <map name="workmap">
+          <area target="" alt="" title="" href="" coords="249,12,1,675,481,674" shape="poly" />
+        </map>
       </div>
 
       <div>
