--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -125,13 +125,7 @@
         </section>
       </div>
 
-      <div class="result-screen bg1 bg">
-        <img src="./assets/tree/1.png" alt="tree" class="tree-img" usemap="#workmap" />
-
-        <map name="workmap">
-          <area target="" alt="" title="" href="" coords="249,12,1,675,481,674" shape="poly" />
-        </map>
-      </div>
+      <div class="result-screen bg1 bg"></div>
 
       <div>
         <section class="selection-options middle-item-container">
