fix: adding block to page

--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -125,7 +125,9 @@
         </section>
       </div>
 
-      <div class="result-screen bg1 bg"></div>
+      <div class="result-screen bg1 bg">
+        <div class="tree-container"></div>
+      </div>
 
       <div>
         <section class="selection-options middle-item-container">
