feat: add save tree to ls

--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -136,8 +136,9 @@
         </section>
         <section class="done-options big-item-container">
           <h3 class="middle-title">Вы нарядили</h3>
-          <ul></ul>
+          <ul class="done-list"></ul>
         </section>
+        <button class="save-tree default-button">Сохранить ёлку</button>
       </div>
     </main>
     <footer class="footer">
