feat: add restore tree from ls

--- a/christmas-task/src/trees.html
+++ b/christmas-task/src/trees.html
@@ -139,6 +139,7 @@
           <ul class="done-list"></ul>
         </section>
         <button class="save-tree default-button">Сохранить ёлку</button>
+        <button class="clear-tree default-button">Удалить наряженное</button>
       </div>
     </main>
     <footer class="footer">
