fix: file names

--- a/christmas-task/src/toys/toys.html
+++ b/christmas-task/src/toys/toys.html
@@ -11,7 +11,7 @@
     <header class="header">
       <h2 class="big-title current-title">Игрушки</h2>
       <img src="../assets/svg/ball-2.svg" alt="ball" />
-      <a href="../trees.html"><h2 class="big-title">Ёлка</h2></a>
+      <a href="../game.html"><h2 class="big-title">Ёлка</h2></a>
 
       <a href="../index.html" type="button" class="back-button"
         ><img src="../assets/svg/arrow-left.svg" alt="back"
