--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <a href="./toys/toys.html"><h2 class="big-title">Игрушки</h2></a>
       <img src="./assets/svg/ball-2.svg" alt="ball" />
-      <a href="./trees.html"><h2 class="big-title">Ёлка</h2></a>
+      <a href="./game.html"><h2 class="big-title">Ёлка</h2></a>
     </header>
     <main class="main">
       <button class="start-game"><a href="./toys/toys.html">Наряжать ёлку!</a></button>
