refactor: transfer tree-html to game.html

--- a/christmas-task/src/game.html
+++ b/christmas-task/src/game.html
@@ -126,7 +126,12 @@
       </div>
 
       <div class="result-screen bg1 bg">
-        <div class="tree-container"></div>
+        <div class="tree-container">
+          <img src="./assets/tree/1.png" usemap="#image-map" alt="tree" class="tree-image" />
+          <map name="image-map" class="map-tree">
+            <area target="" alt="tree" title="" href="" coords="247,3,481,616,363,702,87,691,7,618" shape="poly" />
+          </map>
+        </div>
       </div>
 
       <div>
