refactor: replace snow class

--- a/christmas-task/src/game.html
+++ b/christmas-task/src/game.html
@@ -126,6 +126,7 @@
       </div>
 
       <div class="result-screen bg1 bg">
+        <div class="snow-container"><ul class="snowfall"></ul></div>
         <div class="tree-container">
           <img src="./assets/tree/1.png" usemap="#image-map" alt="tree" class="tree-image" />
           <map name="image-map" class="map-tree">
