--- a/migration-newip-to-ts/src/index.html
+++ b/migration-newip-to-ts/src/index.html
@@ -18,19 +18,13 @@
     <footer>
       <ul>
         <li>
-          <a href="https://rs.school/js/" target="_blank"
-            ><img src="./rs-school-js.svg" alt="link" width="100"
-          /></a>
+          <a href="https://rs.school/js/" target="_blank"><img src="./rs-school-js.svg" alt="link" width="100" /></a>
         </li>
         <li>
-          <a href="https://github.com/SavitskayaKseniya22" target="_blank"
-            >KSENIYA SAVITSKAYA</a
-          >
+          <a href="https://github.com/SavitskayaKseniya22" target="_blank">KSENIYA SAVITSKAYA</a>
         </li>
         <li>© 2021</li>
-        <li class="copyright">
-          Copyright <a href="https://newsapi.org">NewsAPI</a>
-        </li>
+        <li class="copyright">Copyright <a href="https://newsapi.org">NewsAPI</a></li>
       </ul>
     </footer>
 
